{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Touch",
            "id": "5c701ae2-f2dc-4bb5-aa8c-b7a9e582f2cc",
            "actions": [
                {
                    "name": "DragView",
                    "type": "Value",
                    "id": "e33d9b21-5781-425e-bb5b-61dadabac212",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PrimaryContact",
                    "type": "PassThrough",
                    "id": "73fb5e41-e04a-4c4d-9b2c-65be5b35405b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimaryPosition",
                    "type": "PassThrough",
                    "id": "fcba8871-3095-4c5f-b9a2-8d49f2d7d8bf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e2dd9ab9-0bd5-4673-a799-375daf259af3",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DragView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09998223-09f9-4681-aca1-2101297c3c1c",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ae71405a-549a-4c78-a1bf-aefcad1df762",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}